# researchbuilder

./: .env.example  .gitignore  .vercelignore  app.py  auth.py  database.py  main.py  models.py  orchestrator.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_auth_error.js
agents/: literature_search.py  outline.py  review.py  revision.py  synthesis.py  template_parser.py  topic_narrowing.py  writing.py
api/: alembic.ini  auth.py  database.py  diagnose.py  index.py  main.py  models.py  orchestrator.py  pyproject.toml  query_jobs.py  query_users.py  requirements.txt
api/agents/: doc_extractor.py  draft_adapter.py  literature_search.py  outline.py  review.py  revision.py  synthesis.py  template_parser.py  topic_narrowing.py  writing.py
api/alembic/: env.py
api/alembic/versions/: 76dca9bd8c88_add_email_verification_columns.py  a1b2c3d4e5f6_add_missing_user_columns_and_research_jobs.py
api/config/: plans.py  runtime.py  settings.py
api/data/: _test_researchjob.db-shm  _test_researchjob.db-wal  researchbuilder.db-shm  researchbuilder.db-wal
api/routers/: admin.py  auth.py  payment.py  research.py  runs.py
api/schemas/: agent_schemas.py
api/scratch/: test_rt2.py  test_template_library_pipeline.py
api/tools/: file_writer.py  openalex.py  semantic_scholar.py  tavily_search.py
api/utils/: citation_checker.py  citation_formatter.py  docx_exporter.py  docx_injector.py  llm_client.py  mailer.py  prompt_builder.py  research_store.py  state_manager.py  token_counter.py
config/: plans.py
data/: researchpilot.db
deploy/: nginx-api.conf  (+2 more)
(+56 files in other folders)
