[project]
name = "researchbuilder"
version = "0.1.0"
description = "SaaS Multi-Agent academic article generation pipeline"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==5.0.0",
    "docxtpl==0.20.2",
    "fastapi==0.138.1",
    "groq==1.5.0",
    "jinja2==3.1.6",
    "passlib==1.7.4",
    "pydantic==2.13.4",
    "pypdf>=4.0.0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "requests==2.34.2",
    "rich==15.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy==2.0.51",
    "tavily-python==0.7.26",
    "tenacity==9.1.4",
    "uvicorn==0.49.0",
]
