[project]
name = "researchbuilder-backend"
version = "0.1.0"
description = "SaaS Multi-Agent academic article generation pipeline - Backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "bcrypt==5.0.0",
    "docxtpl==0.20.2",
    "email-validator>=2.3.0",
    "fastapi==0.138.1",
    "groq==1.5.0",
    "httpx>=0.28.0",
    "jinja2==3.1.6",
    "litellm>=1.91.1",
    "passlib==1.7.4",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]==2.13.4",
    "pypdf>=4.0.0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "reportlab>=5.0.0",
    "requests==2.34.2",
    "rich>=13.7.0,<15.0.0",
    "sqlalchemy==2.0.51",
    "tenacity>=8.3.0,<9.0.0",
    "uvicorn==0.49.0",
]
